# spdx-license-builder

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEDUPLICATION.md  MANIFEST.in  README.md  extract_licenses_via_spdx.py  find_and_copy_license_files.py  pyproject.toml  ruff.toml  utility.py
.github/workflows/: README.md  build.yml  tests.yml
src/spdx_license_builder/: __init__.py  __main__.py  cli.py  combined.py  deduplication.py  extract_licenses_via_spdx.py  find_and_copy_license_files.py  utility.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_copy_licenses.py  test_deduplication.py  test_extract_spdx.py  test_integration_real_projects.py  test_utility.py
tests/fixtures/test_project/cpp/include/: another_facebook_file.cuh  bsd_file.h  facebook_file.cuh  nvidia_file.cuh
